encapsulated code into functions for cleaning

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,16 +564,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>day</th>\n",
+       "      <th>round</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>result</th>\n",
+       "      <th>overall_result</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>home_penalties</th>\n",
+       "      <th>...</th>\n",
+       "      <th>away_prior_SCA</th>\n",
+       "      <th>away_prior_GCA</th>\n",
+       "      <th>away_prior_Cmp</th>\n",
+       "      <th>away_prior_Att</th>\n",
+       "      <th>away_prior_Cmp%</th>\n",
+       "      <th>away_prior_PrgP</th>\n",
+       "      <th>away_prior_Carries</th>\n",
+       "      <th>away_prior_PrgC</th>\n",
+       "      <th>away_prior_Att_TakeOn</th>\n",
+       "      <th>away_prior_Succ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>935</td>\n",
+       "      <td>10/1/2022</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>NY Red Bulls</td>\n",
+       "      <td>Columbus Crew</td>\n",
+       "      <td>L 1–2</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1157</td>\n",
+       "      <td>10/1/2022</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>Columbus Crew</td>\n",
+       "      <td>NY Red Bulls</td>\n",
+       "      <td>W 2–1</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4881</td>\n",
+       "      <td>10/1/2022</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>FC Dallas</td>\n",
+       "      <td>Colorado Rapids</td>\n",
+       "      <td>L 0–1</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>764</td>\n",
+       "      <td>10/1/2022</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>Atlanta Utd</td>\n",
+       "      <td>NE Revolution</td>\n",
+       "      <td>L 1–2</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4601</td>\n",
+       "      <td>10/1/2022</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>Vancouver W'caps</td>\n",
+       "      <td>L 0–2</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27105</td>\n",
+       "      <td>9/9/2023</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>NE Revolution</td>\n",
+       "      <td>Minnesota Utd</td>\n",
+       "      <td>D 1–1</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.022945</td>\n",
+       "      <td>0.177820</td>\n",
+       "      <td>29.862333</td>\n",
+       "      <td>38.512428</td>\n",
+       "      <td>76.026960</td>\n",
+       "      <td>3.732314</td>\n",
+       "      <td>25.636711</td>\n",
+       "      <td>1.374761</td>\n",
+       "      <td>1.673040</td>\n",
+       "      <td>0.850860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26699</td>\n",
+       "      <td>9/9/2023</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>SJ Earthquakes</td>\n",
+       "      <td>D.C. United</td>\n",
+       "      <td>D 0–0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.895161</td>\n",
+       "      <td>0.197581</td>\n",
+       "      <td>27.614919</td>\n",
+       "      <td>36.411290</td>\n",
+       "      <td>74.541129</td>\n",
+       "      <td>2.973790</td>\n",
+       "      <td>23.379032</td>\n",
+       "      <td>1.191532</td>\n",
+       "      <td>1.205645</td>\n",
+       "      <td>0.572581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30414</td>\n",
+       "      <td>9/9/2023</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>LAFC</td>\n",
+       "      <td>Portland Timbers</td>\n",
+       "      <td>L 0–2</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.164557</td>\n",
+       "      <td>0.291139</td>\n",
+       "      <td>32.343882</td>\n",
+       "      <td>40.588608</td>\n",
+       "      <td>77.979114</td>\n",
+       "      <td>3.626582</td>\n",
+       "      <td>28.040084</td>\n",
+       "      <td>1.402954</td>\n",
+       "      <td>1.603376</td>\n",
+       "      <td>0.767932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28373</td>\n",
+       "      <td>9/9/2023</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>Portland Timbers</td>\n",
+       "      <td>LAFC</td>\n",
+       "      <td>W 2–0</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.361396</td>\n",
+       "      <td>0.285421</td>\n",
+       "      <td>33.960986</td>\n",
+       "      <td>42.158111</td>\n",
+       "      <td>78.806160</td>\n",
+       "      <td>3.932238</td>\n",
+       "      <td>29.983573</td>\n",
+       "      <td>1.687885</td>\n",
+       "      <td>1.839836</td>\n",
+       "      <td>0.895277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26997</td>\n",
+       "      <td>9/9/2023</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Regular Season</td>\n",
+       "      <td>D.C. United</td>\n",
+       "      <td>SJ Earthquakes</td>\n",
+       "      <td>D 0–0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.104743</td>\n",
+       "      <td>0.207510</td>\n",
+       "      <td>34.468379</td>\n",
+       "      <td>42.500000</td>\n",
+       "      <td>79.920751</td>\n",
+       "      <td>3.436759</td>\n",
+       "      <td>30.780632</td>\n",
+       "      <td>1.405138</td>\n",
+       "      <td>1.664032</td>\n",
+       "      <td>0.814229</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3050 rows × 67 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index  game_date  day           round         home_team         away_team  \\\n",
+       "0     935  10/1/2022  Sat  Regular Season      NY Red Bulls     Columbus Crew   \n",
+       "0    1157  10/1/2022  Sat  Regular Season     Columbus Crew      NY Red Bulls   \n",
+       "0    4881  10/1/2022  Sat  Regular Season         FC Dallas   Colorado Rapids   \n",
+       "0     764  10/1/2022  Sat  Regular Season       Atlanta Utd     NE Revolution   \n",
+       "0    4601  10/1/2022  Sat  Regular Season            Austin  Vancouver W'caps   \n",
+       "..    ...        ...  ...             ...               ...               ...   \n",
+       "0   27105   9/9/2023  Sat  Regular Season     NE Revolution     Minnesota Utd   \n",
+       "0   26699   9/9/2023  Sat  Regular Season    SJ Earthquakes       D.C. United   \n",
+       "0   30414   9/9/2023  Sat  Regular Season              LAFC  Portland Timbers   \n",
+       "0   28373   9/9/2023  Sat  Regular Season  Portland Timbers              LAFC   \n",
+       "0   26997   9/9/2023  Sat  Regular Season       D.C. United    SJ Earthquakes   \n",
+       "\n",
+       "   result overall_result  home_score  home_penalties  ...  away_prior_SCA  \\\n",
+       "0   L 1–2              L           1               0  ...        0.000000   \n",
+       "0   W 2–1              W           2               0  ...        0.000000   \n",
+       "0   L 0–1              L           0               0  ...        0.000000   \n",
+       "0   L 1–2              L           1               0  ...        0.000000   \n",
+       "0   L 0–2              L           0               0  ...        0.000000   \n",
+       "..    ...            ...         ...             ...  ...             ...   \n",
+       "0   D 1–1              D           1               0  ...        2.022945   \n",
+       "0   D 0–0              D           0               0  ...        1.895161   \n",
+       "0   L 0–2              L           0               0  ...        2.164557   \n",
+       "0   W 2–0              W           2               0  ...        2.361396   \n",
+       "0   D 0–0              D           0               0  ...        2.104743   \n",
+       "\n",
+       "    away_prior_GCA away_prior_Cmp away_prior_Att  away_prior_Cmp%  \\\n",
+       "0         0.000000       0.000000       0.000000         0.000000   \n",
+       "0         0.000000       0.000000       0.000000         0.000000   \n",
+       "0         0.000000       0.000000       0.000000         0.000000   \n",
+       "0         0.000000       0.000000       0.000000         0.000000   \n",
+       "0         0.000000       0.000000       0.000000         0.000000   \n",
+       "..             ...            ...            ...              ...   \n",
+       "0         0.177820      29.862333      38.512428        76.026960   \n",
+       "0         0.197581      27.614919      36.411290        74.541129   \n",
+       "0         0.291139      32.343882      40.588608        77.979114   \n",
+       "0         0.285421      33.960986      42.158111        78.806160   \n",
+       "0         0.207510      34.468379      42.500000        79.920751   \n",
+       "\n",
+       "    away_prior_PrgP  away_prior_Carries  away_prior_PrgC  \\\n",
+       "0          0.000000            0.000000         0.000000   \n",
+       "0          0.000000            0.000000         0.000000   \n",
+       "0          0.000000            0.000000         0.000000   \n",
+       "0          0.000000            0.000000         0.000000   \n",
+       "0          0.000000            0.000000         0.000000   \n",
+       "..              ...                 ...              ...   \n",
+       "0          3.732314           25.636711         1.374761   \n",
+       "0          2.973790           23.379032         1.191532   \n",
+       "0          3.626582           28.040084         1.402954   \n",
+       "0          3.932238           29.983573         1.687885   \n",
+       "0          3.436759           30.780632         1.405138   \n",
+       "\n",
+       "    away_prior_Att_TakeOn  away_prior_Succ  \n",
+       "0                0.000000         0.000000  \n",
+       "0                0.000000         0.000000  \n",
+       "0                0.000000         0.000000  \n",
+       "0                0.000000         0.000000  \n",
+       "0                0.000000         0.000000  \n",
+       "..                    ...              ...  \n",
+       "0                1.673040         0.850860  \n",
+       "0                1.205645         0.572581  \n",
+       "0                1.603376         0.767932  \n",
+       "0                1.839836         0.895277  \n",
+       "0                1.664032         0.814229  \n",
+       "\n",
+       "[3050 rows x 67 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cleaned_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
