cleaning up notebooks

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -11,6 +11,42 @@
     "%autoreload 2\n",
     "\n",
     "import configparser\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from alive_progress import alive_bar\n",
+    "from joblib import dump, load\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some stuff I set up in a config file so I don't have to keep updating certain\n",
+    "# variables in every script\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(r'')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = Path(config['paths']['output'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import configparser\n",
     "import os\n",
     "import time\n",
     "import random\n",
@@ -25,19 +61,157 @@
     "from pathlib import Path\n",
     "from bs4 import BeautifulSoup\n",
     "from alive_progress import alive_bar\n",
+    "from joblib import dump, load\n",
     "\n",
-    "# some stuff I set up in a config file so I don't have to keep updating certain\n",
-    "# variables in every script\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('../src/config.ini')\n",
-    "output = Path(config['paths']['output'])"
+    "\n",
+    "def predict_outcome(home_team, away_team, match_date, day, round):\n",
+    "    season = int(match_date[:4])\n",
+    "    current_match_data = pd.DataFrame([match_date, day, round, home_team, away_team, '', '',0,0,0,0,'']).T\n",
+    "    current_match_data.columns = ['game_date', 'day', 'round', 'home_team', 'away_team', 'result', 'overall_result', 'home_score', 'home_penalties', 'away_score', 'away_penalties', 'game_key']\n",
+    "    current_match_year = int(current_match_data['game_date'][0][:4])\n",
+    "\n",
+    "    players_numeric_columns = ['Min', 'Gls', 'Ast', 'PK', 'PKatt', 'Sh', 'SoT', 'CrdY',\n",
+    "       'CrdR', 'Touches', 'Tkl', 'Int', 'Blocks', 'xG', 'npxG', 'xAG', 'SCA',\n",
+    "       'GCA', 'Cmp', 'Att', 'Cmp%', 'PrgP', 'Carries', 'PrgC', 'Att_TakeOn',\n",
+    "       'Succ']\n",
+    "\n",
+    "    prior_home_stats = all_players.query(f'Date<\"{match_date}\" and Date > \"{current_match_year-1}-12-31\" and Squad==\"{home_team}\" and Venue==\"Home\" and Start!=\"N\"')\n",
+    "    prior_home_stats = prior_home_stats[players_numeric_columns]\n",
+    "    prior_away_stats = all_players.query(f'Date<\"{match_date}\" and Date > \"{current_match_year-1}-12-31\" and Squad==\"{away_team}\" and Venue==\"Home\" and Start!=\"N\"')\n",
+    "    prior_away_stats = prior_away_stats[players_numeric_columns]\n",
+    "    \n",
+    "    prior_home_stats.columns = [f'home_prior_{x}' for x in prior_home_stats.columns]\n",
+    "    prior_away_stats.columns = [f'away_prior_{x}' for x in prior_away_stats.columns]\n",
+    "    \n",
+    "    if prior_home_stats.shape[0]==0:\n",
+    "        temp = prior_home_stats.columns\n",
+    "        prior_home_stats = pd.DataFrame([0]*len(prior_home_stats.columns)).T\n",
+    "        prior_home_stats.columns = temp\n",
+    "        \n",
+    "    if prior_away_stats.shape[0]==0:\n",
+    "        temp = prior_away_stats.columns\n",
+    "        prior_away_stats = pd.DataFrame([0]*len(prior_away_stats.columns)).T\n",
+    "        prior_away_stats.columns = temp\n",
+    "\n",
+    "    prior_home_stats = pd.DataFrame(prior_home_stats.describe().T['mean']).T.reset_index()\n",
+    "    prior_away_stats = pd.DataFrame(prior_away_stats.describe().T['mean']).T.reset_index()\n",
+    "    \n",
+    "    final_row = pd.concat([current_match_data, prior_home_stats, prior_away_stats], axis=1)\n",
+    "\n",
+    "    final_row.drop(columns = ['index','game_date', 'result', 'overall_result', 'home_score', 'home_penalties', 'away_score', 'away_penalties', 'game_key'], inplace=True)\n",
+    "\n",
+    "    final_row = format_data_for_model(final_row)\n",
+    "\n",
+    "    model = load(output / 'dtr_mvp.joblib')\n",
+    "    prediction = pd.DataFrame(model.predict(final_row))\n",
+    "    prediction.columns = ['overall_result', 'home_score', 'home_penalties', 'away_score', 'away_penalties']\n",
+    "\n",
+    "    return prediction\n",
+    "\n",
+    "def format_data_for_model(df):\n",
+    "    # df.drop(columns=['index','game_date', 'result', 'game_key', 'index.1', 'index.2'], inplace=True)\n",
+    "    \n",
+    "    df_nums = format_numerical_variables(df)\n",
+    "    df_cats = format_categorical_variables(df)\n",
+    "\n",
+    "    formatted_df = pd.concat([df_nums, df_cats],axis=1)\n",
+    "    return formatted_df\n",
+    "    \n",
+    "def format_categorical_variables(df, use_as_encoder=False):\n",
+    "    df_cats = df.select_dtypes(include='O')\n",
+    "    if use_as_encoder:\n",
+    "        encoder = create_encoder(df)\n",
+    "        # global encoder\n",
+    "    else:\n",
+    "        encoder = load(output / 'encoder_mvp.joblib')\n",
+    "        # global encoder\n",
+    "    df_cats_enc = pd.DataFrame(encoder.transform(df_cats).toarray())\n",
+    "    df_cats_enc.columns = encoder.get_feature_names_out()\n",
+    "    df_cats_enc.index = df_cats.index\n",
+    "    return df_cats_enc\n",
+    "    \n",
+    "def format_numerical_variables(df):\n",
+    "    df_nums = df.select_dtypes(exclude='O')\n",
+    "    return df_nums\n",
+    "    \n",
+    "def create_encoder(df):\n",
+    "    encoder = OneHotEncoder()\n",
+    "    encoder.fit(df)\n",
+    "    return encoder\n",
+    "\n",
+    "def result_to_num(result):\n",
+    "    if result == \"D\":\n",
+    "        return 0\n",
+    "    elif result ==\"L\":\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fezac\\AppData\\Local\\Temp\\ipykernel_20540\\1040469713.py:46: DtypeWarning: Columns (41,42,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  all_players = pd.read_csv(config['data']['clean_player_data'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>overall_result</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>home_penalties</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>away_penalties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   overall_result  home_score  home_penalties  away_score  away_penalties\n",
+       "0             1.0         3.0             0.0         2.0             0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LAFC\n",
     "# FC Cincinnati\n",
@@ -69,43 +243,25 @@
     "# D.C. United\n",
     "# St. Louis\n",
     "\n",
-    "home_team = 'Chicago Fire'\n",
-    "away_team = 'LAFC'\n",
-    "match_date = '2024-11-24'\n",
-    "day = 'Sun'\n",
+    "# Regular Season\n",
+    "# Round One\n",
+    "# Conference Semifinals\n",
+    "# First Round\n",
+    "# Conference Finals\n",
+    "# Wild Card Round\n",
+    "# MLS Cup\n",
     "\n",
-    "all_players = pd.read_csv(config['data']['player_data'])\n",
+    "\n",
+    "home_team = 'LA Galaxy'\n",
+    "away_team = 'NY Red Bulls'\n",
+    "match_date = '2024-12-07'\n",
+    "day = 'Sat'\n",
+    "round = 'MLS Cup'\n",
+    "\n",
+    "all_players = pd.read_csv(config['data']['clean_player_data'])\n",
     "matches = pd.read_csv(config['data']['match_data'])\n",
     "\n",
-    "def predict_outcome(home_team, away_team, match_date, day):\n",
-    "    season = int(match_date[:4])\n",
-    "    current_match_data = pd.DataFrame([0, match_date, day, 'Conference Semifinals', home_team, away_team, '', '',0,0,0,0,'']).T\n",
-    "    prior_home_stats = all_players.query(f'Date<\"{current_match_date}\" and Date > \"{current_match_date_year-1}-12-31\" and Squad==\"{home_team}\" and Venue==\"Home\" and Start!=\"N\"')\n",
-    "    prior_home_stats = prior_home_stats[players_numeric_columns]\n",
-    "    prior_away_stats = all_players.query(f'Date<\"{current_match_date}\" and Date > \"{current_match_date_year-1}-12-31\" and Squad==\"{away_team}\" and Venue==\"Home\" and Start!=\"N\"')[players_numeric_columns]\n",
-    "    prior_home_stats.columns = [f'home_prior_{x}' for x in prior_home_stats.columns]\n",
-    "    prior_away_stats.columns = [f'away_prior_{x}' for x in prior_away_stats.columns]\n",
-    "    \n",
-    "    if prior_home_stats.shape[0]==0:\n",
-    "    temp = prior_home_stats.columns\n",
-    "    prior_home_stats = pd.DataFrame([0]*len(prior_home_stats.columns)).T\n",
-    "    prior_home_stats.columns = temp\n",
-    "    \n",
-    "    if prior_away_stats.shape[0]==0:\n",
-    "        temp = prior_away_stats.columns\n",
-    "        prior_away_stats = pd.DataFrame([0]*len(prior_away_stats.columns)).T\n",
-    "        prior_away_stats.columns = temp\n",
-    "        \n",
-    "    home_team_stats = pd.DataFrame(home_team_stats.describe().T['mean']).T.reset_index()\n",
-    "    away_team_stats = pd.DataFrame(away_team_stats.describe().T['mean']).T.reset_index()\n",
-    "    prior_home_stats = pd.DataFrame(prior_home_stats.describe().T['mean']).T.reset_index()\n",
-    "    prior_away_stats = pd.DataFrame(prior_away_stats.describe().T['mean']).T.reset_index()\n",
-    "\n",
-    "    pred_row = pd.concat([current_match_data, prior_home_stats, prior_away_stats], axis=1)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "predict_outcome(home_team, away_team, match_date)"
+    "predict_outcome(home_team, away_team, match_date, day, round)"
    ]
   },
   {
@@ -113,36 +269,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# current_match_date = '2024-11-23'\n",
-    "# current_match_date_year = 2024\n",
-    "# home_team = \"LAFC\"\n",
-    "# away_team = \"Seattle Sounders FC\"\n",
-    "\n",
-    "# prior_home_stats = all_players.query(f'Date<\"{current_match_date}\" and Date > \"{current_match_date_year-1}-12-31\" and Squad==\"{home_team}\" and Venue==\"Home\" and Start!=\"N\"')\n",
-    "# prior_home_stats.to_csv(output/f'prior_stat_files/{current_match_date}_{home_team}_{away_team}.csv')\n",
-    "# prior_home_stats = prior_home_stats[players_numeric_columns]\n",
-    "# prior_away_stats = all_players.query(f'Date<\"{current_match_date}\" and Date > \"{current_match_date_year-1}-12-31\" and Squad==\"{away_team}\" and Venue==\"Home\" and Start!=\"N\"')[players_numeric_columns]\n",
-    "# prior_home_stats.columns = [f'home_prior_{x}' for x in prior_home_stats.columns]\n",
-    "# prior_away_stats.columns = [f'away_prior_{x}' for x in prior_away_stats.columns]\n",
-    "\n",
-    "if prior_home_stats.shape[0]==0:\n",
-    "    temp = prior_home_stats.columns\n",
-    "    prior_home_stats = pd.DataFrame([0]*len(prior_home_stats.columns)).T\n",
-    "    prior_home_stats.columns = temp\n",
-    "    \n",
-    "if prior_away_stats.shape[0]==0:\n",
-    "    temp = prior_away_stats.columns\n",
-    "    prior_away_stats = pd.DataFrame([0]*len(prior_away_stats.columns)).T\n",
-    "    prior_away_stats.columns = temp\n",
-    "    \n",
-    "home_team_stats = pd.DataFrame(home_team_stats.describe().T['mean']).T.reset_index()\n",
-    "away_team_stats = pd.DataFrame(away_team_stats.describe().T['mean']).T.reset_index()\n",
-    "prior_home_stats = pd.DataFrame(prior_home_stats.describe().T['mean']).T.reset_index()\n",
-    "prior_away_stats = pd.DataFrame(prior_away_stats.describe().T['mean']).T.reset_index()\n",
-    "\n",
-    "pred_row = pd.concat([current_match_data, prior_home_stats, prior_away_stats], axis=1)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
