cleaning up notebooks

--- a/notebooks/model_making.ipynb
+++ b/notebooks/model_making.ipynb
@@ -733,6 +733,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "home_prior_Min\n",
+      "home_prior_Gls\n",
+      "home_prior_Ast\n",
+      "home_prior_PK\n",
+      "home_prior_PKatt\n",
+      "home_prior_Sh\n",
+      "home_prior_SoT\n",
+      "home_prior_CrdY\n",
+      "home_prior_CrdR\n",
+      "home_prior_Touches\n",
+      "home_prior_Tkl\n",
+      "home_prior_Int\n",
+      "home_prior_Blocks\n",
+      "home_prior_xG\n",
+      "home_prior_npxG\n",
+      "home_prior_xAG\n",
+      "home_prior_SCA\n",
+      "home_prior_GCA\n",
+      "home_prior_Cmp\n",
+      "home_prior_Att\n",
+      "home_prior_Cmp%\n",
+      "home_prior_PrgP\n",
+      "home_prior_Carries\n",
+      "home_prior_PrgC\n",
+      "home_prior_Att_TakeOn\n",
+      "home_prior_Succ\n",
+      "away_prior_Min\n",
+      "away_prior_Gls\n",
+      "away_prior_Ast\n",
+      "away_prior_PK\n",
+      "away_prior_PKatt\n",
+      "away_prior_Sh\n",
+      "away_prior_SoT\n",
+      "away_prior_CrdY\n",
+      "away_prior_CrdR\n",
+      "away_prior_Touches\n",
+      "away_prior_Tkl\n",
+      "away_prior_Int\n",
+      "away_prior_Blocks\n",
+      "away_prior_xG\n",
+      "away_prior_npxG\n",
+      "away_prior_xAG\n",
+      "away_prior_SCA\n",
+      "away_prior_GCA\n",
+      "away_prior_Cmp\n",
+      "away_prior_Att\n",
+      "away_prior_Cmp%\n",
+      "away_prior_PrgP\n",
+      "away_prior_Carries\n",
+      "away_prior_PrgC\n",
+      "away_prior_Att_TakeOn\n",
+      "away_prior_Succ\n",
+      "day_Fri\n",
+      "day_Mon\n",
+      "day_Sat\n",
+      "day_Sun\n",
+      "day_Thu\n",
+      "day_Tue\n",
+      "day_Wed\n",
+      "round_Conference Finals\n",
+      "round_Conference Semifinals\n",
+      "round_First Round\n",
+      "round_MLS Cup\n",
+      "round_Regular Season\n",
+      "round_Round One\n",
+      "round_Wild Card Round\n",
+      "home_team_Atlanta Utd\n",
+      "home_team_Austin\n",
+      "home_team_CF Montréal\n",
+      "home_team_Charlotte\n",
+      "home_team_Chicago Fire\n",
+      "home_team_Colorado Rapids\n",
+      "home_team_Columbus Crew\n",
+      "home_team_D.C. United\n",
+      "home_team_FC Cincinnati\n",
+      "home_team_FC Dallas\n",
+      "home_team_Houston Dynamo\n",
+      "home_team_Inter Miami\n",
+      "home_team_LA Galaxy\n",
+      "home_team_LAFC\n",
+      "home_team_Minnesota Utd\n",
+      "home_team_NE Revolution\n",
+      "home_team_NY Red Bulls\n",
+      "home_team_NYCFC\n",
+      "home_team_Nashville SC\n",
+      "home_team_Orlando City\n",
+      "home_team_Philadelphia Union\n",
+      "home_team_Portland Timbers\n",
+      "home_team_Real Salt Lake\n",
+      "home_team_SJ Earthquakes\n",
+      "home_team_Seattle Sounders FC\n",
+      "home_team_Sporting KC\n",
+      "home_team_St. Louis\n",
+      "home_team_Toronto FC\n",
+      "home_team_Vancouver W'caps\n",
+      "away_team_Atlanta Utd\n",
+      "away_team_Austin\n",
+      "away_team_CF Montréal\n",
+      "away_team_Charlotte\n",
+      "away_team_Chicago Fire\n",
+      "away_team_Colorado Rapids\n",
+      "away_team_Columbus Crew\n",
+      "away_team_D.C. United\n",
+      "away_team_FC Cincinnati\n",
+      "away_team_FC Dallas\n",
+      "away_team_Houston Dynamo\n",
+      "away_team_Inter Miami\n",
+      "away_team_LA Galaxy\n",
+      "away_team_LAFC\n",
+      "away_team_Minnesota Utd\n",
+      "away_team_NE Revolution\n",
+      "away_team_NY Red Bulls\n",
+      "away_team_NYCFC\n",
+      "away_team_Nashville SC\n",
+      "away_team_Orlando City\n",
+      "away_team_Philadelphia Union\n",
+      "away_team_Portland Timbers\n",
+      "away_team_Real Salt Lake\n",
+      "away_team_SJ Earthquakes\n",
+      "away_team_Seattle Sounders FC\n",
+      "away_team_Sporting KC\n",
+      "away_team_St. Louis\n",
+      "away_team_Toronto FC\n",
+      "away_team_Vancouver W'caps\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in X_train_cleaned.columns:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
