--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -37,10 +37,16 @@
     "import openpyxl\n",
     "import sqlite3\n",
     "\n",
+    "\n",
     "from io import StringIO\n",
     "from pathlib import Path\n",
     "from bs4 import BeautifulSoup\n",
     "from alive_progress import alive_bar\n",
+    "import datetime\n",
+    "\n",
+    "# for file saving\n",
+    "today = datetime.datetime.now()\n",
+    "today = today.strftime(\"%Y_%m_%d\")\n",
     "\n",
     "# some stuff I set up in a config file so I don't have to keep updating certain\n",
     "# variables in every script\n",
@@ -295,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2024_df.to_csv(output/\"mls_2024\"/\"all_player_data_2024.csv\", index=False)"
+    "player_data_2024_df.to_csv(output/\"mls_2024\"/f\"all_player_data_2024_{today}.csv\", index=False)"
    ]
   },
   {
@@ -342,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2023_df.to_csv(output/\"mls_2023\"/\"all_player_data_2023.csv\", index=False)"
+    "player_data_2023_df.to_csv(output/\"mls_2023\"/f\"all_player_data_2023_{today}.csv\", index=False)"
    ]
   },
   {
@@ -376,8 +382,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2022_df.to_csv(output/\"mls_2022\"/\"all_player_data_2022.csv\", index=False)"
+    "player_data_2022_df.to_csv(output/\"mls_2022\"/f\"all_player_data_2022_{today}.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
