Updating scraping progress

--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +54,7 @@
        "['../src/config.ini']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +100,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Setup\n",
+    "Run this only on your first time running this file."
    ]
   },
   {
@@ -608,8 +600,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only run this portion if you want a SQL db"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,13 +618,13 @@
     "# with SQL than Python.\n",
     "\n",
     "# set up connection\n",
-    "con = sqlite3.connect(output / 'mls.db')\n",
-    "cur = con.cursor()"
+    "# con = sqlite3.connect(output / 'mls.db')\n",
+    "# cur = con.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -642,27 +641,8 @@
    "source": [
     "# if_exists is set to 'append' since I can always remove duplicates if needed\n",
     "# I don't want to accidentally replace the entire table\n",
-    "all_teams_df.to_sql(name='teams', con=con, if_exists='append', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "943"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_players_df.to_sql(name='players', con=con, if_exists='append', index=False)"
+    "# all_teams_df.to_sql(name='teams', con=con, if_exists='append', index=False)\n",
+    "# all_players_df.to_sql(name='players', con=con, if_exists='append', index=False)"
    ]
   },
   {
@@ -693,9 +673,9 @@
    "source": [
     "## Progress\n",
     "\n",
-    "* ~~Inter Miami~~\n",
-    "* ~~Columbus Crew~~\n",
-    "* ~~FC Cincinnati~~\n",
+    "* ~~Inter Miami~~ - Initial Data Extraction Done\n",
+    "* ~~Columbus Crew~~ - Initial Data Extraction Done\n",
+    "* ~~FC Cincinnati~~ - Initial Data Extraction Done\n",
     "* Orlando City\n",
     "* Charlotte\n",
     "* NYCFC\n",
@@ -730,15 +710,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # this is to restart from here so you don't rerun the above\n",
-    "# all_players_df = pd.read_csv(output / 'mls_2024/all_players_2024_12_08.csv')\n",
-    "# all_teams_df = pd.read_csv(output / 'mls_2024/all_teams_2024_12_08.csv')\n",
-    "# year = 2024"
+    "# Re-run this each time as to not have to rerun the above\n",
+    "all_players_df = pd.read_csv(output / 'mls_2024/all_players_2024_12_08.csv')\n",
+    "all_teams_df = pd.read_csv(output / 'mls_2024/all_teams_2024_12_08.csv')\n",
+    "year = 2024"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +736,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|█████▏                                  | ▆▄▂ 13/102 [13%] in 14:21 (~1:38:00, "
+      "on 5: Could not obtain data for Marcelo-Weigandt                                \n",
+      "|█████████                               | ▂▄▆ 23/102 [23%] in 27:33 (~1:36:00, "
      ]
     }
    ],
